// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.demo";
option java_outer_classname = "DemoProto";
option objc_class_prefix = "HLW";

package demo;

//-- remote procedures / services

// The cases service definition.
service Cases {
  
  rpc AddCase (CaseRequest) returns (Reply) {}
  rpc ListCases (Empty) returns (stream CaseReply) {}
  
}


//ADDCASE RPC
// The request message containing the ucase
message CaseRequest {
  string name = 1;
  string location = 2;
  int32 age = 3;
  string infected_type = 4;
  string state = 5;
}

// The response message containing the case
message Reply {
  string message = 1;
}

//LISTCASES RPC
message Empty {}

message CaseReply {
  string name = 1;
  string location = 2;
  int32 age = 3;
  string infected_type = 4;
  string state = 5;

}